spacing fixes

--- a/source/_sass/about.scss
+++ b/source/_sass/about.scss
@@ -11,24 +11,25 @@
 	.people {
 		margin-top: 32px;
 		margin-bottom: 32px;
-	}
+		.pheading {
+			margin-bottom: 32px;
+		}
+		.person {
+			margin-top: 16px;
+			display: flex;
+			flex-direction: row;
 
-	.person {
-		margin-top: 32px;
-		display: flex;
-		flex-direction: row;
-	}
-
-	img {
-		border-radius: 100%;
-		margin-right: 16px;
-		width: 64px;
-		height: 64px;
-		object-fit: cover;
-	}
-
-	.details {
-		margin-top: 8px;
+			img {
+				border-radius: 100%;
+				margin-right: 16px;
+				width: 64px;
+				height: 64px;
+				object-fit: cover;
+			}
+			.details {
+				margin-top: 8px;
+			}
+		}
 	}
 
 	.meta {
